--- a/drew.html
+++ b/drew.html
@@ -6,6 +6,10 @@
   <title>DREW — Purpose</title>
 
   <style>
+    :root {
+      --drew-pink: #E81D89;
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -28,6 +32,7 @@
       color: #fff;
     }
 
+    /* Darkening overlay for readability */
     body::before {
       content: "";
       position: fixed;
@@ -46,49 +51,39 @@
       justify-content: center;
       align-items: center;
       padding: 6vh 6vw;
-      gap: 24px;
+      gap: 32px;
     }
 
+    /* Clean Neon Pink Title */
     .heading {
-      font-size: clamp(36px, 6vw, 80px);
+      font-size: clamp(44px, 7vw, 96px);
       text-transform: uppercase;
+      font-weight: 700;
+      color: var(--drew-pink);
       letter-spacing: 0.08em;
-      margin-bottom: 12px;
+      text-shadow: 0 0 15px rgba(232, 29, 137, 0.7);
     }
 
-    .subheading {
-      font-size: clamp(14px, 1.8vw, 20px);
-      opacity: 0.9;
-      text-align: center;
-      max-width: 800px;
-      margin-bottom: 24px;
-      line-height: 1.4;
-    }
-
+    /* Two clean text boxes */
     .card {
       width: 100%;
       max-width: 860px;
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(0, 0, 0, 0.85);
       border-radius: 14px;
       padding: 28px;
       text-align: center;
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(6px);
-    }
-
-    .card + .card {
-      margin-top: 10px;
+      border: 2px solid var(--drew-pink);
+      box-shadow: 0 0 20px rgba(232, 29, 137, 0.5);
     }
 
     .card-body {
-      font-size: 17px;
-      line-height: 1.5;
+      font-size: 18px;
       opacity: 0.95;
     }
 
     @media (max-width: 640px) {
       .page {
-        padding: 5vh 4vw 6vh;
+        padding: 5vh 4vw 8vh;
       }
 
       .card {
@@ -100,3 +95,20 @@
 
 <body>
   <div class="page">
+
+    <!-- TITLE -->
+    <div class="heading">DREW</div>
+
+    <!-- BOX 1 -->
+    <section class="card">
+      <div class="card-body">This is where the paragraph goes.</div>
+    </section>
+
+    <!-- BOX 2 -->
+    <section class="card">
+      <div class="card-body">This is where the paragraph goes.</div>
+    </section>
+
+  </div>
+</body>
+</html>
