--- a/drew.html
+++ b/drew.html
@@ -1,250 +1,326 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>$DREW — Rise Together</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>$DREW — Rise Together</title>
 
-  <style>
-    :root {
-      --drew-pink: #E81D89;
-    }
+<style>
+  :root {
+    --drew-pink: #E81D89;
+  }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-    html, body {
-      width: 100%;
-      height: 100%;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: #fff;
-    }
+  html, body {
+    width: 100%;
+    height: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    color: #fff;
+    scroll-behavior: smooth;
+  }
 
-    body {
-      background-image: url("peacockedit.jpeg");
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-    }
+  body {
+    background-image: url("peacockedit.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    overflow-x: hidden;
+  }
 
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.78);
-      z-index: 0;
-    }
+  body::before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.78);
+    z-index: 0;
+  }
 
-    .page {
-      position: relative;
-      z-index: 1;
-      padding: 6vh 6vw 10vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 38px;
-    }
+  .page {
+    position: relative;
+    z-index: 1;
+    padding: 10vh 6vw 12vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 38px;
+  }
 
-    /* TITLE */
-    .heading {
-      font-size: clamp(48px, 8vw, 100px);
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      color: var(--drew-pink);
-      text-shadow:
-        0 0 14px rgba(232, 29, 137, 0.9),
-        0 0 36px rgba(232, 29, 137, 0.6),
-        0 0 60px rgba(232, 29, 137, 0.4);
-      text-align: center;
-      text-transform: uppercase;
-    }
+  /* Drew Animation Above Title */
+  .drew-float {
+    width: 200px;
+    margin-bottom: -40px;
+    animation: hover 3s ease-in-out infinite;
+    filter: drop-shadow(0 0 20px var(--drew-pink));
+  }
 
-    .subheading {
-      font-size: clamp(15px, 1.9vw, 21px);
-      max-width: 900px;
-      text-align: center;
-      line-height: 1.6;
-      opacity: 0.95;
-    }
+  @keyframes hover {
+    0%,100% { transform: translateY(0px); }
+    50% { transform: translateY(-10px); }
+  }
 
-    .cards {
-      width: 100%;
-      max-width: 900px;
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-    }
+  /* Title + Divider */
+  .heading {
+    font-size: clamp(48px, 8vw, 100px);
+    font-weight: 900;
+    letter-spacing: 0.05em;
+    color: var(--drew-pink);
+    text-shadow:
+      0 0 14px rgba(232, 29, 137, 0.9),
+      0 0 36px rgba(232, 29, 137, 0.6),
+      0 0 60px rgba(232, 29, 137, 0.4);
+    text-transform: uppercase;
+    text-align: center;
+  }
 
-    .card {
-      background: rgba(0, 0, 0, 0.9);
-      border-radius: 14px;
-      padding: 26px;
-      text-align: center;
-      border: 1px solid rgba(232, 29, 137, 0.65);
-      box-shadow:
-        0 0 14px rgba(232, 29, 137, 0.55),
-        0 0 30px rgba(232, 29, 137, 0.28);
-      backdrop-filter: blur(6px);
-    }
+  .divider {
+    width: 160px;
+    height: 4px;
+    border-radius: 4px;
+    background: var(--drew-pink);
+    box-shadow:
+      0 0 12px rgba(232, 29, 137, 0.95),
+      0 0 32px rgba(232, 29, 137, 0.6);
+  }
 
-    .card-body {
-      font-size: 17px;
-      line-height: 1.7;
-      opacity: 0.95;
-    }
+  .subheading {
+    font-size: clamp(15px, 1.9vw, 21px);
+    max-width: 900px;
+    text-align: center;
+    opacity: 0.95;
+    line-height: 1.6;
+  }
 
-    /* 🔥 NEW ROADMAP DESIGN */
-    .roadmap {
-      width: 100%;
-      max-width: 900px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 22px;
-      margin-top: 28px;
-    }
+  /* Fade-in animations */
+  .reveal {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease;
+  }
+  .reveal.active {
+    opacity: 1;
+    transform: none;
+  }
 
-    .roadmap-title {
-      font-size: clamp(34px, 6vw, 62px);
-      color: var(--drew-pink);
-      font-weight: 900;
-      text-transform: uppercase;
-      text-shadow: 0 0 20px rgba(232, 29, 137, 0.8);
-      margin-bottom: 14px;
-      letter-spacing: 0.08em;
-      text-align: center;
-    }
+  /* Boxes */
+  .cards {
+    width: 100%;
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+  }
 
-    .phase-box {
-      width: 100%;
-      padding: 24px 18px;
-      text-align: center;
-      border-radius: 16px;
-      background: rgba(10, 10, 10, 0.88);
-      border: 2px solid var(--drew-pink);
-      box-shadow:
-        0 0 18px rgba(232, 29, 137, 0.55),
-        0 0 45px rgba(232, 29, 137, 0.35);
-      backdrop-filter: blur(5px);
-    }
+  .card {
+    background: rgba(0, 0, 0, 0.9);
+    border-radius: 14px;
+    padding: 26px;
+    text-align: center;
+    border: 1px solid rgba(232, 29, 137, 0.65);
+    backdrop-filter: blur(6px);
+    box-shadow:
+      0 0 14px rgba(232, 29, 137, 0.55),
+      0 0 30px rgba(232, 29, 137, 0.28);
+    cursor: pointer;
+  }
 
-    .phase-number {
-      font-size: 30px;
-      font-weight: 800;
-      color: var(--drew-pink);
-      margin-bottom: 8px;
-      text-transform: uppercase;
-    }
+  /* Roadmap Phase Blocks */
+  .roadmap-title {
+    font-size: clamp(34px, 6vw, 62px);
+    font-weight: 900;
+    color: var(--drew-pink);
+    text-transform: uppercase;
+    text-shadow: 0 0 20px rgba(232, 29, 137, 0.8);
+    text-align: center;
+    margin-top: 14px;
+  }
 
-    .phase-text {
-      font-size: 17px;
-      opacity: 0.92;
-    }
+  .phase-block {
+    width: 100%;
+    max-width: 900px;
+    background: rgba(10, 10, 10, 0.88);
+    border-radius: 16px;
+    border: 2px solid var(--drew-pink);
+    padding: 22px 20px;
+    text-align: center;
+    box-shadow:
+      0 0 18px rgba(232, 29, 137, 0.5),
+      0 0 45px rgba(232, 29, 137, 0.3);
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
 
-    .arrow {
-      font-size: 40px;
-      line-height: 0;
-      color: var(--drew-pink);
-      text-shadow: 0 0 15px rgba(232, 29, 137, 0.8);
-    }
+  .phase-number {
+    font-size: 30px;
+    font-weight: 800;
+    color: var(--drew-pink);
+  }
+  .arrow {
+    font-size: 40px;
+    color: var(--drew-pink);
+    text-shadow: 0 0 15px rgba(232, 29, 137, 0.8);
+    margin: -8px 0 18px;
+  }
 
-    .future-title {
-      font-size: 24px;
-      color: var(--drew-pink);
-      margin-top: 30px;
-      font-weight: 700;
-      text-align: center;
-      text-shadow: 0 0 12px rgba(232, 29, 137, 0.7);
-      text-transform: uppercase;
-    }
+  /* Modal popups */
+  .modal {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.88);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+    z-index: 999;
+  }
+  .modal-content {
+    max-width: 650px;
+    background: #000;
+    border: 2px solid var(--drew-pink);
+    border-radius: 20px;
+    padding: 26px;
+    text-align: center;
+    box-shadow: 0 0 35px rgba(232, 29, 137, 0.6);
+  }
+  .close-modal {
+    margin-top: 20px;
+    padding: 10px 22px;
+    background: var(--drew-pink);
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    color: #000;
+    font-weight: 800;
+  }
 
-    .future-list {
-      text-align: center;
-      list-style: none;
-      padding: 0;
-      font-size: 17px;
-      opacity: 0.9;
-      margin-top: 10px;
-      line-height: 1.75;
-    }
-
-  </style>
+</style>
 </head>
 
 <body>
-  <div class="page">
 
-    <div class="heading">$DREW</div>
+<div class="page">
 
-    <div class="subheading">
-      Our mission is to build a strong and united community focused on supporting men’s mental health.
-      Together, we will raise funds and donate to recognised organisations —
-      each decision voted on by the $DREW community.
-    </div>
+  <!-- ⭐ Floating DREW animation -->
+  <video class="drew-float" autoplay muted loop playsinline>
+    <source src="drew-animation.mp4" type="video/mp4">
+  </video>
 
-    <div class="cards">
+  <div class="heading">$DREW</div>
+  <div class="divider"></div>
 
-      <section class="card">
-        <div class="card-body">
-          <span>$DREW</span> is a community-driven token with a purpose:
-          to spark a movement that creates a ripple effect through the minds of men —
-          reminding us that we are stuck in this beautiful work of art, together.
-        </div>
-      </section>
+  <div class="subheading reveal">
+    Our mission is to build a strong and united community supporting men’s mental health.<br>
+    Donations are chosen by the community — driven by $DREW holders.
+  </div>
 
-      <section class="card">
-        <div class="card-body">
-          The future of <span>$DREW</span> is shaped entirely by its holders.
-          NFT & token holders vote on donations and the direction of the project —
-          strengthening this movement for men’s mental health awareness.
-        </div>
-      </section>
+  <div class="cards">
 
-    </div>
+    <section class="card reveal">
+      $DREW is a community-driven token with a purpose:<br>
+      to spark a ripple effect through the minds of men —<br>
+      reminding us we are all in this beautiful work of art together.
+    </section>
 
-    <!-- 🌟 Roadmap with connected phases -->
-    <section class="roadmap">
-
-      <div class="roadmap-title">Roadmap</div>
-
-      <div class="phase-box">
-        <div class="phase-number">PHASE 1</div>
-        <div class="phase-text">NFT Collection #1 — 888 $DREW NFTs</div>
-      </div>
-
-      <div class="arrow">↓</div>
-
-      <div class="phase-box">
-        <div class="phase-number">PHASE 2</div>
-        <div class="phase-text">$DREW Token Creation — Airdrop to NFT Holders</div>
-      </div>
-
-      <div class="arrow">↓</div>
-
-      <div class="phase-box">
-        <div class="phase-number">PHASE 3</div>
-        <div class="phase-text">Token Trading Live</div>
-      </div>
-
-      <div class="arrow">↓</div>
-
-      <div class="phase-box">
-        <div class="phase-number">PHASE 4</div>
-        <div class="phase-text">First quarterly community vote + donation</div>
-      </div>
-
-      <div class="future-title">Down the Road</div>
-
-      <ul class="future-list">
-        <li>• Collection 2 & Collection 3 NFT Drops</li>
-        <li>• “The Pit” opens — future utility and movement expansion</li>
-      </ul>
-
+    <section class="card reveal">
+      The future of $DREW is shaped by its holders.<br>
+      NFT & token holders vote on every step of the project,<br>
+      strengthening a movement for men’s mental health.
     </section>
 
   </div>
+
+  <div class="roadmap-title reveal">Roadmap</div>
+
+  <!-- 🔥 Clickable Phases -->
+  <div class="phase-block reveal" onclick="openModal(1)">
+    <div class="phase-number">PHASE 1</div>
+    NFT Collection #1 — 888 $DREW NFTs
+  </div>
+  <div class="arrow">↓</div>
+
+  <div class="phase-block reveal" onclick="openModal(2)">
+    <div class="phase-number">PHASE 2</div>
+    $DREW Token Creation — Airdrop to NFT Holders
+  </div>
+  <div class="arrow">↓</div>
+
+  <div class="phase-block reveal" onclick="openModal(3)">
+    <div class="phase-number">PHASE 3</div>
+    Token Trading Live
+  </div>
+  <div class="arrow">↓</div>
+
+  <div class="phase-block reveal" onclick="openModal(4)">
+    <div class="phase-number">PHASE 4</div>
+    First Quarterly Charity Vote + Donation
+  </div>
+
+  <div class="roadmap-title reveal" style="font-size:32px;">Down The Road</div>
+
+  <div class="phase-block reveal">
+    Collection 2 & 3 — More NFT Drops
+  </div>
+  <div class="phase-block reveal">
+    “The Pit” — Future Utility & Expansion
+  </div>
+
+</div>
+
+<!-- Modal Template -->
+<div id="modal-1" class="modal">
+  <div class="modal-content">
+    <h2>PHASE 1</h2>
+    <p>888 $DREW NFTs dropped — establishing the foundation of the movement.</p>
+    <button class="close-modal" onclick="closeModal()">CLOSE</button>
+  </div>
+</div>
+
+<div id="modal-2" class="modal">
+  <div class="modal-content">
+    <h2>PHASE 2</h2>
+    <p>Token deployed — NFT holders receive $DREW airdrop.</p>
+    <button class="close-modal" onclick="closeModal()">CLOSE</button>
+  </div>
+</div>
+
+<div id="modal-3" class="modal">
+  <div class="modal-content">
+    <h2>PHASE 3</h2>
+    <p>$DREW listed — movement goes public, trading goes live.</p>
+    <button class="close-modal" onclick="closeModal()">CLOSE</button>
+  </div>
+</div>
+
+<div id="modal-4" class="modal">
+  <div class="modal-content">
+    <h2>PHASE 4</h2>
+    <p>Quarterly vote & donation — directly impacting real world mental health support.</p>
+    <button class="close-modal" onclick="closeModal()">CLOSE</button>
+  </div>
+</div>
+
+<script>
+  function revealElements() {
+    const reveals = document.querySelectorAll('.reveal');
+    reveals.forEach(el => {
+      const rect = el.getBoundingClientRect();
+      if (rect.top < window.innerHeight - 50) el.classList.add('active');
+    });
+  }
+  window.addEventListener('scroll', revealElements);
+  window.addEventListener('load', revealElements);
+
+  function openModal(id) {
+    document.getElementById('modal-' + id).style.display = 'flex';
+  }
+  function closeModal() {
+    document.querySelectorAll('.modal').forEach(m => m.style.display = 'none');
+  }
+</script>
+
 </body>
 </html>
