--- a/drew.html
+++ b/drew.html
@@ -28,8 +28,18 @@
     background-image: url("peacockedit.jpeg");
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
     overflow-x: hidden;
+  }
+
+  /* Mobile background fix */
+  @media (max-width: 900px) {
+    body {
+      background-attachment: scroll !important;
+      background-size: cover !important;
+      background-repeat: no-repeat !important;
+    }
   }
 
   body::before {
@@ -50,7 +60,6 @@
     gap: 38px;
   }
 
-  /* Drew Animation Above Title */
   .drew-float {
     width: 200px;
     margin-bottom: -40px;
@@ -63,7 +72,6 @@
     50% { transform: translateY(-10px); }
   }
 
-  /* Title + Divider */
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
@@ -73,8 +81,8 @@
       0 0 14px rgba(232, 29, 137, 0.9),
       0 0 36px rgba(232, 29, 137, 0.6),
       0 0 60px rgba(232, 29, 137, 0.4);
-    text-transform: uppercase;
     text-align: center;
+    text-transform: uppercase;
   }
 
   .divider {
@@ -95,7 +103,6 @@
     line-height: 1.6;
   }
 
-  /* Fade-in animations */
   .reveal {
     opacity: 0;
     transform: translateY(40px);
@@ -106,7 +113,6 @@
     transform: none;
   }
 
-  /* Boxes */
   .cards {
     width: 100%;
     max-width: 900px;
@@ -125,10 +131,8 @@
     box-shadow:
       0 0 14px rgba(232, 29, 137, 0.55),
       0 0 30px rgba(232, 29, 137, 0.28);
-    cursor: pointer;
   }
 
-  /* Roadmap Phase Blocks */
   .roadmap-title {
     font-size: clamp(34px, 6vw, 62px);
     font-weight: 900;
@@ -151,7 +155,6 @@
       0 0 18px rgba(232, 29, 137, 0.5),
       0 0 45px rgba(232, 29, 137, 0.3);
     margin-bottom: 20px;
-    cursor: pointer;
   }
 
   .phase-number {
@@ -159,6 +162,7 @@
     font-weight: 800;
     color: var(--drew-pink);
   }
+
   .arrow {
     font-size: 40px;
     color: var(--drew-pink);
@@ -166,37 +170,24 @@
     margin: -8px 0 18px;
   }
 
-  /* Modal popups */
-  .modal {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.88);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-    z-index: 999;
-  }
-  .modal-content {
-    max-width: 650px;
-    background: #000;
-    border: 2px solid var(--drew-pink);
-    border-radius: 20px;
-    padding: 26px;
+  .future-title {
+    font-size: 24px;
+    color: var(--drew-pink);
+    font-weight: 700;
     text-align: center;
-    box-shadow: 0 0 35px rgba(232, 29, 137, 0.6);
-  }
-  .close-modal {
-    margin-top: 20px;
-    padding: 10px 22px;
-    background: var(--drew-pink);
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    color: #000;
-    font-weight: 800;
+    text-shadow: 0 0 12px rgba(232, 29, 137, 0.7);
+    text-transform: uppercase;
+    margin-top: 30px;
   }
 
+  .future-list {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+    font-size: 17px;
+    opacity: 0.9;
+    line-height: 1.75;
+  }
 </style>
 </head>
 
@@ -204,7 +195,7 @@
 
 <div class="page">
 
-  <!-- ⭐ Floating DREW animation -->
+  <!-- Drew Animation -->
   <video class="drew-float" autoplay muted loop playsinline>
     <source src="drew-animation.mp4" type="video/mp4">
   </video>
@@ -235,91 +226,48 @@
 
   <div class="roadmap-title reveal">Roadmap</div>
 
-  <!-- 🔥 Clickable Phases -->
-  <div class="phase-block reveal" onclick="openModal(1)">
+  <div class="phase-block reveal">
     <div class="phase-number">PHASE 1</div>
     NFT Collection #1 — 888 $DREW NFTs
   </div>
   <div class="arrow">↓</div>
 
-  <div class="phase-block reveal" onclick="openModal(2)">
+  <div class="phase-block reveal">
     <div class="phase-number">PHASE 2</div>
     $DREW Token Creation — Airdrop to NFT Holders
   </div>
   <div class="arrow">↓</div>
 
-  <div class="phase-block reveal" onclick="openModal(3)">
+  <div class="phase-block reveal">
     <div class="phase-number">PHASE 3</div>
     Token Trading Live
   </div>
   <div class="arrow">↓</div>
 
-  <div class="phase-block reveal" onclick="openModal(4)">
+  <div class="phase-block reveal">
     <div class="phase-number">PHASE 4</div>
     First Quarterly Charity Vote + Donation
   </div>
 
-  <div class="roadmap-title reveal" style="font-size:32px;">Down The Road</div>
+  <div class="future-title reveal">Down The Road</div>
 
-  <div class="phase-block reveal">
-    Collection 2 & 3 — More NFT Drops
-  </div>
-  <div class="phase-block reveal">
-    “The Pit” — Future Utility & Expansion
-  </div>
+  <ul class="future-list reveal">
+    <li>• Collection 2 & 3 — Additional NFT Drops</li>
+    <li>• “The Pit” — Future Utility & Expansion</li>
+  </ul>
 
-</div>
-
-<!-- Modal Template -->
-<div id="modal-1" class="modal">
-  <div class="modal-content">
-    <h2>PHASE 1</h2>
-    <p>888 $DREW NFTs dropped — establishing the foundation of the movement.</p>
-    <button class="close-modal" onclick="closeModal()">CLOSE</button>
-  </div>
-</div>
-
-<div id="modal-2" class="modal">
-  <div class="modal-content">
-    <h2>PHASE 2</h2>
-    <p>Token deployed — NFT holders receive $DREW airdrop.</p>
-    <button class="close-modal" onclick="closeModal()">CLOSE</button>
-  </div>
-</div>
-
-<div id="modal-3" class="modal">
-  <div class="modal-content">
-    <h2>PHASE 3</h2>
-    <p>$DREW listed — movement goes public, trading goes live.</p>
-    <button class="close-modal" onclick="closeModal()">CLOSE</button>
-  </div>
-</div>
-
-<div id="modal-4" class="modal">
-  <div class="modal-content">
-    <h2>PHASE 4</h2>
-    <p>Quarterly vote & donation — directly impacting real world mental health support.</p>
-    <button class="close-modal" onclick="closeModal()">CLOSE</button>
-  </div>
 </div>
 
 <script>
   function revealElements() {
-    const reveals = document.querySelectorAll('.reveal');
-    reveals.forEach(el => {
-      const rect = el.getBoundingClientRect();
-      if (rect.top < window.innerHeight - 50) el.classList.add('active');
+    document.querySelectorAll('.reveal').forEach(el => {
+      if (el.getBoundingClientRect().top < window.innerHeight - 50) {
+        el.classList.add('active');
+      }
     });
   }
   window.addEventListener('scroll', revealElements);
   window.addEventListener('load', revealElements);
-
-  function openModal(id) {
-    document.getElementById('modal-' + id).style.display = 'flex';
-  }
-  function closeModal() {
-    document.querySelectorAll('.modal').forEach(m => m.style.display = 'none');
-  }
 </script>
 
 </body>
