--- a/drew.html
+++ b/drew.html
@@ -16,43 +16,43 @@
     box-sizing: border-box;
   }
 
-  html, body {
-    width: 100%;
+  html {
     height: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    color: #fff;
-    scroll-behavior: smooth;
-  }
-
-  body {
     background-image: url("peacockedit.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
+  }
+
+  body {
+    min-height: 100%;
+    font-family: system-ui, sans-serif;
+    color: #fff;
     overflow-x: hidden;
+    position: relative;
   }
 
-  /* Mobile background fix */
-  @media (max-width: 900px) {
-    body {
-      background-attachment: scroll !important;
-      background-size: cover !important;
-      background-repeat: no-repeat !important;
-    }
-  }
-
+  /* FIXED overlay that always covers the viewport */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0, 0, 0, 0.78);
-    z-index: 0;
+    background: rgba(0,0,0,0.78);
+    pointer-events: none;
+    z-index: -1;
+  }
+
+  /* Mobile consistency */
+  @media (max-width: 900px) {
+    html {
+      background-attachment: scroll !important;
+      background-size: cover !important;
+    }
   }
 
   .page {
     position: relative;
-    z-index: 1;
     padding: 10vh 6vw 12vh;
     display: flex;
     flex-direction: column;
@@ -66,7 +66,6 @@
     animation: hover 3s ease-in-out infinite;
     filter: drop-shadow(0 0 20px var(--drew-pink));
   }
-
   @keyframes hover {
     0%,100% { transform: translateY(0px); }
     50% { transform: translateY(-10px); }
@@ -78,11 +77,11 @@
     letter-spacing: 0.05em;
     color: var(--drew-pink);
     text-shadow:
-      0 0 14px rgba(232, 29, 137, 0.9),
-      0 0 36px rgba(232, 29, 137, 0.6),
-      0 0 60px rgba(232, 29, 137, 0.4);
-    text-align: center;
+      0 0 14px rgba(232,29,137,0.9),
+      0 0 36px rgba(232,29,137,0.6),
+      0 0 60px rgba(232,29,137,0.4);
     text-transform: uppercase;
+    text-align: center;
   }
 
   .divider {
@@ -91,8 +90,8 @@
     border-radius: 4px;
     background: var(--drew-pink);
     box-shadow:
-      0 0 12px rgba(232, 29, 137, 0.95),
-      0 0 32px rgba(232, 29, 137, 0.6);
+      0 0 12px rgba(232,29,137,0.95),
+      0 0 32px rgba(232,29,137,0.6);
   }
 
   .subheading {
@@ -101,16 +100,6 @@
     text-align: center;
     opacity: 0.95;
     line-height: 1.6;
-  }
-
-  .reveal {
-    opacity: 0;
-    transform: translateY(40px);
-    transition: all 0.8s ease;
-  }
-  .reveal.active {
-    opacity: 1;
-    transform: none;
   }
 
   .cards {
@@ -122,15 +111,14 @@
   }
 
   .card {
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0,0,0,0.9);
     border-radius: 14px;
     padding: 26px;
     text-align: center;
-    border: 1px solid rgba(232, 29, 137, 0.65);
-    backdrop-filter: blur(6px);
+    border: 1px solid rgba(232,29,137,0.65);
     box-shadow:
-      0 0 14px rgba(232, 29, 137, 0.55),
-      0 0 30px rgba(232, 29, 137, 0.28);
+      0 0 14px rgba(232,29,137,0.55),
+      0 0 30px rgba(232,29,137,0.28);
   }
 
   .roadmap-title {
@@ -138,7 +126,7 @@
     font-weight: 900;
     color: var(--drew-pink);
     text-transform: uppercase;
-    text-shadow: 0 0 20px rgba(232, 29, 137, 0.8);
+    text-shadow: 0 0 20px rgba(232,29,137,0.8);
     text-align: center;
     margin-top: 14px;
   }
@@ -146,14 +134,14 @@
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10, 10, 10, 0.88);
+    background: rgba(10,10,10,0.88);
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
     box-shadow:
-      0 0 18px rgba(232, 29, 137, 0.5),
-      0 0 45px rgba(232, 29, 137, 0.3);
+      0 0 18px rgba(232,29,137,0.5),
+      0 0 45px rgba(232,29,137,0.3);
     margin-bottom: 20px;
   }
 
@@ -166,7 +154,7 @@
   .arrow {
     font-size: 40px;
     color: var(--drew-pink);
-    text-shadow: 0 0 15px rgba(232, 29, 137, 0.8);
+    text-shadow: 0 0 15px rgba(232,29,137,0.8);
     margin: -8px 0 18px;
   }
 
@@ -175,7 +163,7 @@
     color: var(--drew-pink);
     font-weight: 700;
     text-align: center;
-    text-shadow: 0 0 12px rgba(232, 29, 137, 0.7);
+    text-shadow: 0 0 12px rgba(232,29,137,0.7);
     text-transform: uppercase;
     margin-top: 30px;
   }
@@ -192,10 +180,8 @@
 </head>
 
 <body>
-
 <div class="page">
 
-  <!-- Drew Animation -->
   <video class="drew-float" autoplay muted loop playsinline>
     <source src="drew-animation.mp4" type="video/mp4">
   </video>
@@ -203,72 +189,57 @@
   <div class="heading">$DREW</div>
   <div class="divider"></div>
 
-  <div class="subheading reveal">
+  <div class="subheading">
     Our mission is to build a strong and united community supporting men’s mental health.<br>
     Donations are chosen by the community — driven by $DREW holders.
   </div>
 
   <div class="cards">
-
-    <section class="card reveal">
+    <section class="card">
       $DREW is a community-driven token with a purpose:<br>
       to spark a ripple effect through the minds of men —<br>
       reminding us we are all in this beautiful work of art together.
     </section>
 
-    <section class="card reveal">
+    <section class="card">
       The future of $DREW is shaped by its holders.<br>
       NFT & token holders vote on every step of the project,<br>
       strengthening a movement for men’s mental health.
     </section>
-
   </div>
 
-  <div class="roadmap-title reveal">Roadmap</div>
+  <div class="roadmap-title">Roadmap</div>
 
-  <div class="phase-block reveal">
+  <div class="phase-block">
     <div class="phase-number">PHASE 1</div>
     NFT Collection #1 — 888 $DREW NFTs
   </div>
   <div class="arrow">↓</div>
 
-  <div class="phase-block reveal">
+  <div class="phase-block">
     <div class="phase-number">PHASE 2</div>
     $DREW Token Creation — Airdrop to NFT Holders
   </div>
   <div class="arrow">↓</div>
 
-  <div class="phase-block reveal">
+  <div class="phase-block">
     <div class="phase-number">PHASE 3</div>
     Token Trading Live
   </div>
   <div class="arrow">↓</div>
 
-  <div class="phase-block reveal">
+  <div class="phase-block">
     <div class="phase-number">PHASE 4</div>
     First Quarterly Charity Vote + Donation
   </div>
 
-  <div class="future-title reveal">Down The Road</div>
+  <div class="future-title">Down The Road</div>
 
-  <ul class="future-list reveal">
+  <ul class="future-list">
     <li>• Collection 2 & 3 — Additional NFT Drops</li>
     <li>• “The Pit” — Future Utility & Expansion</li>
   </ul>
 
 </div>
-
-<script>
-  function revealElements() {
-    document.querySelectorAll('.reveal').forEach(el => {
-      if (el.getBoundingClientRect().top < window.innerHeight - 50) {
-        el.classList.add('active');
-      }
-    });
-  }
-  window.addEventListener('scroll', revealElements);
-  window.addEventListener('load', revealElements);
-</script>
-
 </body>
 </html>
