--- a/drew.html
+++ b/drew.html
@@ -6,9 +6,7 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root {
-    --drew-pink: #E81D89;
-  }
+  :root { --drew-pink: #E81D89; }
 
   * {
     margin: 0;
@@ -25,34 +23,37 @@
     position: relative;
   }
 
-  /* NEW: Double mirrored wallpaper */
+  /* 🟣 Infinite mirrored wallpaper background */
   .bg-wallpaper {
-    position: fixed;
-    inset: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 200vh; /* gives headroom for scroll */
     z-index: -3;
     display: flex;
     flex-direction: column;
   }
 
-  .bg-top,
-  .bg-bottom {
+  .bg-top, .bg-bottom {
     flex: 1;
     background-image: url("peacockedit.jpeg");
     background-size: cover;
     background-position: center;
+    width: 100%;
   }
 
-  /* Mirror bottom half */
   .bg-bottom {
     transform: scaleY(-1);
   }
 
-  /* Full screen overlay */
+  /* Screen tint overlay */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
     background: rgba(0,0,0,0.78);
+    pointer-events: none;
     z-index: -2;
   }
 
@@ -66,6 +67,20 @@
     gap: 38px;
   }
 
+  /* Floating Drew Animation */
+  .drew-float {
+    width: 200px;
+    margin-bottom: -40px;
+    animation: hover 3s ease-in-out infinite;
+    filter: drop-shadow(0 0 20px var(--drew-pink));
+  }
+
+  @keyframes hover {
+    0%,100% { transform: translateY(0); }
+    50% { transform: translateY(-10px); }
+  }
+
+  /* Title */
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
@@ -73,7 +88,8 @@
     color: var(--drew-pink);
     text-shadow:
       0 0 14px rgba(232,29,137,0.9),
-      0 0 36px rgba(232,29,137,0.6);
+      0 0 36px rgba(232,29,137,0.6),
+      0 0 60px rgba(232,29,137,0.4);
     text-align: center;
     text-transform: uppercase;
   }
@@ -92,8 +108,8 @@
     font-size: clamp(15px, 1.9vw, 21px);
     max-width: 900px;
     text-align: center;
-    opacity: 0.95;
     line-height: 1.6;
+    opacity: 0.95;
   }
 
   .cards {
@@ -115,14 +131,15 @@
       0 0 30px rgba(232,29,137,0.28);
   }
 
+  /* Roadmap */
   .roadmap-title {
     font-size: clamp(34px, 6vw, 62px);
     font-weight: 900;
     color: var(--drew-pink);
     text-transform: uppercase;
-    text-shadow: 0 0 20px rgba(232,29,137,0.8);
     text-align: center;
     margin-top: 14px;
+    text-shadow: 0 0 20px rgba(232,29,137,0.8);
   }
 
   .phase-block {
@@ -155,11 +172,11 @@
   .future-title {
     font-size: 24px;
     color: var(--drew-pink);
-    font-weight: 700;
     text-align: center;
-    text-shadow: 0 0 12px rgba(232,29,137,0.7);
+    font-weight: 700;
     text-transform: uppercase;
     margin-top: 30px;
+    text-shadow: 0 0 12px rgba(232,29,137,0.7);
   }
 
   .future-list {
@@ -175,13 +192,17 @@
 
 <body>
 
-<!-- MIRRORED WALLPAPER BACKGROUND -->
+<!-- Infinite Mirrored Wallpaper -->
 <div class="bg-wallpaper">
   <div class="bg-top"></div>
   <div class="bg-bottom"></div>
 </div>
 
 <div class="page">
+
+  <video class="drew-float" autoplay muted loop playsinline>
+    <source src="drew-animation.mp4" type="video/mp4">
+  </video>
 
   <div class="heading">$DREW</div>
   <div class="divider"></div>
