--- a/drew.html
+++ b/drew.html
@@ -14,57 +14,37 @@
     box-sizing: border-box;
   }
 
-  html, body {
-    width: 100%;
+  /* 🔥 Stable infinite wallpaper */
+  body {
     min-height: 100%;
+    width: 100%;
     font-family: system-ui, sans-serif;
     color: #fff;
     overflow-x: hidden;
+    background: url("peacockedit.jpeg") top center / cover repeat-y fixed;
     position: relative;
   }
 
-  /* 🟣 Infinite mirrored wallpaper background */
-  .bg-wallpaper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 200vh; /* gives headroom for scroll */
-    z-index: -3;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .bg-top, .bg-bottom {
-    flex: 1;
-    background-image: url("peacockedit.jpeg");
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-  }
-
-  .bg-bottom {
-    transform: scaleY(-1);
-  }
-
-  /* Screen tint overlay */
-  body::before {
+  /* Soft fade at bottom of image to hide repeats */
+  body::after {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.78);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.15), rgba(0,0,0,0.9));
+    z-index: -1;
     pointer-events: none;
-    z-index: -2;
   }
 
+  /* Page layout */
   .page {
     position: relative;
-    z-index: 1;
+    width: 100%;
     padding: 10vh 6vw 12vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 38px;
+    backdrop-filter: blur(2px);
   }
 
   /* Floating Drew Animation */
@@ -74,42 +54,36 @@
     animation: hover 3s ease-in-out infinite;
     filter: drop-shadow(0 0 20px var(--drew-pink));
   }
-
   @keyframes hover {
     0%,100% { transform: translateY(0); }
     50% { transform: translateY(-10px); }
   }
 
-  /* Title */
   .heading {
     font-size: clamp(48px, 8vw, 100px);
     font-weight: 900;
-    letter-spacing: 0.05em;
     color: var(--drew-pink);
+    text-align: center;
+    text-transform: uppercase;
     text-shadow:
       0 0 14px rgba(232,29,137,0.9),
       0 0 36px rgba(232,29,137,0.6),
       0 0 60px rgba(232,29,137,0.4);
-    text-align: center;
-    text-transform: uppercase;
   }
 
   .divider {
     width: 160px;
     height: 4px;
-    border-radius: 4px;
     background: var(--drew-pink);
-    box-shadow:
-      0 0 12px rgba(232,29,137,0.95),
-      0 0 32px rgba(232,29,137,0.6);
+    border-radius: 4px;
+    box-shadow: 0 0 12px rgba(232,29,137,0.95);
   }
 
   .subheading {
-    font-size: clamp(15px, 1.9vw, 21px);
+    font-size: clamp(15px, 2vw, 21px);
+    line-height: 1.6;
     max-width: 900px;
     text-align: center;
-    line-height: 1.6;
-    opacity: 0.95;
   }
 
   .cards {
@@ -121,14 +95,12 @@
   }
 
   .card {
-    background: rgba(0,0,0,0.9);
+    background: rgba(0,0,0,0.75);
     border-radius: 14px;
     padding: 26px;
     text-align: center;
     border: 1px solid rgba(232,29,137,0.65);
-    box-shadow:
-      0 0 14px rgba(232,29,137,0.55),
-      0 0 30px rgba(232,29,137,0.28);
+    backdrop-filter: blur(6px);
   }
 
   /* Roadmap */
@@ -136,8 +108,8 @@
     font-size: clamp(34px, 6vw, 62px);
     font-weight: 900;
     color: var(--drew-pink);
-    text-transform: uppercase;
     text-align: center;
+    text-transform: uppercase;
     margin-top: 14px;
     text-shadow: 0 0 20px rgba(232,29,137,0.8);
   }
@@ -145,15 +117,12 @@
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.88);
+    background: rgba(10,10,10,0.72);
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
-    box-shadow:
-      0 0 18px rgba(232,29,137,0.5),
-      0 0 45px rgba(232,29,137,0.3);
-    margin-bottom: 20px;
+    backdrop-filter: blur(5px);
   }
 
   .phase-number {
@@ -166,17 +135,17 @@
     font-size: 40px;
     color: var(--drew-pink);
     text-shadow: 0 0 15px rgba(232,29,137,0.8);
-    margin: -8px 0 18px;
+    margin: 10px 0;
   }
 
   .future-title {
     font-size: 24px;
     color: var(--drew-pink);
-    text-align: center;
     font-weight: 700;
     text-transform: uppercase;
-    margin-top: 30px;
+    text-align: center;
     text-shadow: 0 0 12px rgba(232,29,137,0.7);
+    margin-top: 30px;
   }
 
   .future-list {
@@ -187,16 +156,11 @@
     opacity: 0.9;
     line-height: 1.75;
   }
+
 </style>
 </head>
 
 <body>
-
-<!-- Infinite Mirrored Wallpaper -->
-<div class="bg-wallpaper">
-  <div class="bg-top"></div>
-  <div class="bg-bottom"></div>
-</div>
 
 <div class="page">
 
@@ -213,17 +177,17 @@
   </div>
 
   <div class="cards">
-    <section class="card">
+    <div class="card">
       $DREW is a community-driven token with a purpose:<br>
       to spark a ripple effect through the minds of men —<br>
       reminding us we are all in this beautiful work of art together.
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       The future of $DREW is shaped by its holders.<br>
       NFT & token holders vote on every step of the project,<br>
       strengthening a movement for men’s mental health.
-    </section>
+    </div>
   </div>
 
   <div class="roadmap-title">Roadmap</div>
@@ -252,7 +216,6 @@
   </div>
 
   <div class="future-title">Down The Road</div>
-
   <ul class="future-list">
     <li>• Collection 2 & 3 — Additional NFT Drops</li>
     <li>• “The Pit” — Future Utility & Expansion</li>
