--- a/drew.html
+++ b/drew.html
@@ -47,12 +47,12 @@
     transform: scaleY(-1);
   }
 
-  /* Full screen overlay (UNCHANGED) */
+  /* Full screen overlay - now lighter */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.78);
+    background: rgba(0,0,0,0.10);
     z-index: -2;
   }
 
@@ -104,9 +104,9 @@
     gap: 14px;
   }
 
-  /* 🔥 GREY PARAGRAPH BOXES NOW TRANSPARENT */
+  /* Medium transparency applied */
   .card {
-    background: rgba(0,0,0,0.30); /* was 0.9 */
+    background: rgba(0,0,0,0.18);
     border-radius: 14px;
     padding: 26px;
     text-align: center;
@@ -126,11 +126,11 @@
     margin-top: 14px;
   }
 
-  /* 🔥 ROADMAP BOXES ALSO TRANSPARENT */
+  /* Medium transparency applied */
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.30); /* was 0.88 */
+    background: rgba(0,0,0,0.18);
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
