--- a/drew.html
+++ b/drew.html
@@ -47,12 +47,12 @@
     transform: scaleY(-1);
   }
 
-  /* Full screen overlay - now lighter */
+  /* Full screen overlay */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.10);
+    background: rgba(0,0,0,0.78);
     z-index: -2;
   }
 
@@ -104,9 +104,8 @@
     gap: 14px;
   }
 
-  /* Medium transparency applied */
   .card {
-    background: rgba(0,0,0,0.18);
+    background: rgba(0,0,0,0.9);
     border-radius: 14px;
     padding: 26px;
     text-align: center;
@@ -126,11 +125,10 @@
     margin-top: 14px;
   }
 
-  /* Medium transparency applied */
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(0,0,0,0.18);
+    background: rgba(10,10,10,0.88);
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
